# harness

./: .env.example  .gitignore  README.md  agents.md  config.py  config.yml  crewai_integration.py  pyproject.toml
adapters/: __init__.py  anthropic.py  base.py  siliconflow.py
agents/: __init__.py
docs/rules/: 提交规则.md
docs/superpowers/plans/: 2026-04-01-multi-llm-provider-plan.md
docs/superpowers/specs/: 2026-04-01-multi-llm-provider-design.md
src/harness/: __init__.py  config.py  crewai_integration.py
src/harness/adapters/: __init__.py  anthropic.py  base.py  siliconflow.py
src/harness/agents/: __init__.py
