[project]
name = "harness"
version = "0.1.0"
description = "Multi-LLM provider adapter layer for CrewAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.12.2",
    "mlflow>=3.10.1",
    "pydantic>=2.11.10",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
